[tool.poetry]
name = "ascii-canvas"
version = "2.0.0"
description = "Treat strings like Items on a 2D Canvas."
authors = ["Paul Schweizer <paulschweizer@gmx.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
coverage = "^7.3.2"
isort = { version = "^5.12.0", extras = ["pyproject"] }
flake8 = "^6.1.0"
mypy = "^1.6.1"
pylint = "^3.0.2"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
