[tool.poetry]
name = "ascii-canvas"
version = "2.0.1"
description = "Treat strings like Items on a 2D Canvas."
authors = ["Paul Schweizer <paulschweizer@gmx.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
coverage = "^7.3.2"
isort = { version = "^5.12.0", extras = ["pyproject"] }
flake8 = "^6.1.0"
mypy = "^1.6.1"
pylint = "^3.0.2"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "duplicate-code",
    "no-else-raise",
    "too-many-arguments",
    "too-many-branches",
]
